--- a/src/popover.less
+++ b/src/popover.less
@@ -29,6 +29,10 @@
     overflow-y: auto;
     overflow-x: hidden;
     max-height: 400px;
+
+    &&--vert {
+        padding-right: 20px;
+    }
 }
 
 [pop-over] {
